--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 html,body { margin:0; padding:0; height:100%; width:100%; overflow: hidden;}
 
 #editor {
-    height: 100%;
-    width:50%;
-    display:inline-block;
+    height: 50%;
+    width:100%;
+    
 }
 
 #container {
-	height:100%;
-	width:auto;
+	height:auto;
+	width:100%;
   white-space : nowrap; 
   overflow : hidden;
   position:relative;
 }
 
 #iframe {
-	height:100%;
+	height:50%;
 	display:inline-block;
-	width:50%;
+	width:100%;
 }
 
 /* disable tag matching */
