--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ html,body { margin:0; padding:0; height:100%; width:100%; overflow: hidden;}
 }
 
 #container {
-	height:auto;
-	width:100%;
+	height:100%;
+	width:auto;
   white-space : nowrap; 
   overflow : hidden;
   position:relative;
